Implement mat-cli shell completion